# pushstart

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  check_tools.py  docker-compose.yml  environment.yml  run.sh  run_docker.sh  setup.sh  test.sh
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agent/: graph.py  state.py  tools.py
backend/app/core/: db.py  llm.py
backend/app/mcp_client/: calendar_client.py  gmail_client.py  todoist_client.py
backend/app/models/: event.py  task.py  thread.py
backend/app/routers/: calendar.py  chat.py  guided.py  tasks.py
backend/app/services/: calendar_service.py  gmail_service.py  task_service.py
backend/tests/: test_calendar_manual.py  test_integration.py  test_integration_backend.py  test_unit_backend.py
docs/: AGENT_GUIDELINES.md  OVERVIEW.md  phase1-mvp.md  phase2-agent.md  phase3-calendar.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CalendarView.tsx  ChatPanel.tsx  GuidedSessionView.tsx  HistoryPanel.tsx  LinkifiedText.tsx  RightPanel.tsx  TaskDetailView.tsx  TaskList.tsx
frontend/tests/: TaskList.test.tsx
mcp/: Dockerfile  requirements.txt
mcp/calendar_server/: requirements.txt  server.py
mcp/gmail_server/: requirements.txt  server.py
mcp/tests/: test_unit_mcp.py
mcp/todoist_server/: requirements.txt  server.py
