[tool.poetry]
name = "pushstart-backend"
version = "0.1.0"
description = "Backend for Pushstart"
authors = ["Gaurav Pooniwala"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
mcp = "^0.1.0"  # Assuming mcp python sdk is available

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
